--- a/.config/ranger/shortcuts.conf
+++ b/.config/ranger/shortcuts.conf
@@ -6,6 +6,10 @@ map gd cd ~/Documents
 map td tab_new ~/Documents
 map md shell mv -v %s ~/Documents
 map Yd shell cp -rv %s ~/Documents
+map gD cd ~/Downloads
+map tD tab_new ~/Downloads
+map mD shell mv -v %s ~/Downloads
+map YD shell cp -rv %s ~/Downloads
 map gb cd ~/Books
 map tb tab_new ~/Books
 map mb shell mv -v %s ~/Books
@@ -62,6 +66,14 @@ map gae cd ~/Documents/journal/Exes
 map tae tab_new ~/Documents/journal/Exes
 map mae shell mv -v %s ~/Documents/journal/Exes
 map Yae shell cp -rv %s ~/Documents/journal/Exes
+map gns cd ~/net/schnurr/Serien
+map tns tab_new ~/net/schnurr/Serien
+map mns shell mv -v %s ~/net/schnurr/Serien
+map Yns shell cp -rv %s ~/net/schnurr/Serien
+map gLp cd ~/puppet/lanpartei
+map tLp tab_new ~/puppet/lanpartei
+map mLp shell mv -v %s ~/puppet/lanpartei
+map YLp shell cp -rv %s ~/puppet/lanpartei
 map bf shell $EDITOR ~/.bmfiles
 map bd shell $EDITOR ~/.bmdirs
 map cfb shell $EDITOR ~/.bashrc
