--- a/.config/ranger/shortcuts.conf
+++ b/.config/ranger/shortcuts.conf
@@ -22,6 +22,10 @@ map gwa cd ~/work/community/apis-pupae
 map twa tab_new ~/work/community/apis-pupae
 map mwa shell mv -v %s ~/work/community/apis-pupae
 map Ywa shell cp -rv %s ~/work/community/apis-pupae
+map gww cd ~/work/nov/weezer
+map tww tab_new ~/work/nov/weezer
+map mww shell mv -v %s ~/work/nov/weezer
+map Yww shell cp -rv %s ~/work/nov/weezer
 map gPs cd ~/Projects/SimplyAddWater
 map tPs tab_new ~/Projects/SimplyAddWater
 map mPs shell mv -v %s ~/Projects/SimplyAddWater
